Changelog
=========

2.0 - Unreleased
----------------

* Specify all package dependencies including Acquisition and Zope2. You need
  to use either the eggified Zope 2.12 or create fake-eggs for these.
  [hannosch]

* 'make_site' no longer stores the path of the site manager in its name. This
  way the name can't become out-dated. PersistentComponents' __repr__ method
  now returns the current path instead of the name of the site manager.
  [yuppie]

* Requiring zope.component >= 3.5.0.
  [icemac]

* Utilities registered with an absolute path were returned with the
  RequestContainer in the aq_chain. As the result of the first utility
  look-up is stored in the adapter look-up cache, subsequent utility
  look-ups return the utlitiy with the RequestContainer of the first
  look-up.
  
  Solution: For utilities registered with an absolute path the
  RequestContainer is now also removed at look-up.
  [icemac]

1.0c1 - 2008-08-27
------------------

* Added buildout for project, so testing can be done using ``bin/test``.
  [icemac]

* Added ability to register utilities with an absolute path. These
  utilities are returned wrapped into their original context. This
  change is backward compatible to existing registries.

  But registering utilities having an acquisition context will behave
  different because these utilities will be returned in their original
  context. To restore the previous behavior, register utilities
  unwrapped (aq_base).

  For storing path information the component must implement
  getPhysicalPath and have an absolute path.

  When a component registered as utility is moved and registered again
  the path stored in registry gets updated.
  [icemac]


0.4 - 2008-07-23
----------------

* Rewrite PersistentComponents.registeredUtilities to not use
  internal methods. This makes it compatible with both zope.component <3.5.0dev
  and >3.5.0dev.
  [wichert]


0.3 - 2007-12-24
----------------
