@@ -6,7 +6,10 @@ develop = .
 recipe = plone.recipe.zope2install
 url = http://www.zope.org/Products/Zope/2.11.2/Zope-2.11.2-final.tgz
 fake-zope-eggs = true
-skip-fake-eggs = zope.component
+skip-fake-eggs =
+    zope.component
+    zope.location
+    zope.schema
 additional-fake-eggs =
     Acquisition
     Zope2
