@@ -21,7 +21,7 @@ Load all of Five's configuration (this is a functional test):
 
 Enable local component lookup hooks:
 
-    >>> from zope.app.component.hooks import setHooks
+    >>> from zope.site.hooks import setHooks
     >>> setHooks()
 
 User Set Up
