@@ -4,7 +4,7 @@
 
   <subscriber
       for="Products.Five.component.interfaces.IObjectManagerSite
-           zope.app.container.interfaces.IObjectMovedEvent"
+           zope.container.interfaces.IObjectMovedEvent"
       handler=".update_sitemanager_bases_handler"
       />
 
